[package]
name = "tradroguelike"
version = "0.1.9"
edition = "2021"


[dependencies]
rltk = { version = "0.8.0", features = ["serde"] }
specs = { version = "0.17", features = ["serde"] }
specs-derive = "0.4.1"
serde= { version = "^1.0.44", features = ["derive"] }
serde_json = "^1.0.44"
lazy_static = "1.5.0"